<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="173dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/application_description_full"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:textColor="#000"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="75dp"
        android:layout_height="29dp"
        android:layout_marginEnd="304dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="304dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/author"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/author_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="176dp"
        android:layout_height="29dp"
        android:layout_marginEnd="192dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="192dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/student"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="347dp"
        android:layout_height="29dp"
        android:layout_marginEnd="21dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/student_number"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="226dp"
        android:layout_height="29dp"
        android:layout_marginEnd="142dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="142dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/contact"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="337dp"
        android:layout_height="29dp"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/email_info"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="352dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:text="@string/email2_info"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="54dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="165dp"
        android:layout_marginLeft="166dp"
        android:layout_marginRight="165dp"
        android:layout_marginStart="166dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/ic_format_list_bulleted_black_24dp"
        tools:ignore="VectorDrawableCompat"
        android:onClick="goToList"/>


</android.support.constraint.ConstraintLayout>