<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/welcome-icon"
        android:layout_width="181dp"
        android:layout_height="165dp"
        android:layout_marginEnd="101dp"
        android:layout_marginLeft="102dp"
        android:layout_marginRight="101dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/welcome_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_add_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="255dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/welcome_description"
        android:text="@string/welcome_description_text"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome-icon"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:layout_marginEnd="107dp"
        android:layout_marginLeft="106dp"
        android:layout_marginRight="107dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/black"
        android:onClick="startApp"
        android:text="@string/start_button_text"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</android.support.constraint.ConstraintLayout>