<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ContactListActivity">

<TextView
    android:id="@+id/textView14"
    android:layout_width="93dp"
    android:layout_height="29dp"
    android:layout_marginEnd="275dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="275dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:text="@string/form_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/contactName"
    android:layout_width="354dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="14dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="14dp"
    android:layout_marginStart="16dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/textView15"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView14" />

<TextView
    android:id="@+id/textView15"
    android:layout_width="93dp"
    android:layout_height="29dp"
    android:layout_marginEnd="275dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="275dp"
    android:layout_marginStart="16dp"
    android:text="@string/family_name"
    app:layout_constraintBottom_toTopOf="@+id/contactFamilyName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/contactName" />

<EditText
    android:id="@+id/contactFamilyName"
    android:layout_width="354dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="14dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="14dp"
    android:layout_marginStart="16dp"
    android:ems="10"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/textView4"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView15" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="278dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="278dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:text="@string/form_phone"
    app:layout_constraintBottom_toTopOf="@+id/contactPhone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/contactFamilyName" />

<EditText
    android:id="@+id/contactPhone"
    android:layout_width="354dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:ems="10"
    android:inputType="phone"
    app:layout_constraintBottom_toTopOf="@+id/textView5"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="329dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="329dp"
    android:layout_marginStart="16dp"
    android:text="@string/form_email"
    app:layout_constraintBottom_toTopOf="@+id/contactEmail"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/contactPhone" />

<EditText
    android:id="@+id/contactEmail"
    android:layout_width="354dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:ems="10"
    android:inputType="textEmailAddress"
    app:layout_constraintBottom_toTopOf="@+id/textView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView5" />

<TextView
    android:id="@+id/textView"
    android:layout_width="65dp"
    android:layout_height="19dp"
    android:layout_marginEnd="303dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="303dp"
    android:layout_marginStart="16dp"
    android:text="@string/form_address"
    app:layout_constraintBottom_toTopOf="@+id/contactAddress"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/contactEmail" />

<EditText
    android:id="@+id/contactAddress"
    android:layout_width="352dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:ems="10"
    android:inputType="textPostalAddress"
    app:layout_constraintBottom_toTopOf="@+id/textView13"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

<TextView
    android:id="@+id/textView13"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="212dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="212dp"
    android:layout_marginStart="16dp"
    android:text="@string/form_phone_additional"
    app:layout_constraintBottom_toTopOf="@+id/contactAdditionalPhone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/contactAddress" />

<EditText
    android:id="@+id/contactAdditionalPhone"
    android:layout_width="352dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="115dp"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:ems="10"
    android:inputType="phone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView13" />

<Button
    android:id="@+id/addContactBtn"
    android:layout_width="220dp"
    android:layout_height="58dp"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="82dp"
    android:layout_marginLeft="82dp"
    android:layout_marginRight="82dp"
    android:layout_marginStart="82dp"
    android:layout_marginTop="40dp"
    android:background="@color/colorAccent"
    android:text="@string/edit_contact_button"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/contactAdditionalPhone" />

</android.support.constraint.ConstraintLayout>