<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactInfoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="151dp"
        android:layout_height="78dp"
        android:layout_marginEnd="97dp"
        android:layout_marginLeft="98dp"
        android:layout_marginRight="97dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person_outline_black_24dp"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/person_logo" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="331dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="331dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="113dp"
        android:text="@string/form_name"
        app:layout_constraintBottom_toTopOf="@+id/contact_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        android:textColor="#000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="290dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="290dp"
        android:layout_marginStart="16dp"
        android:text="@string/form_family_name"
        app:layout_constraintBottom_toTopOf="@+id/contact_family_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_name" />

    <TextView
        android:id="@+id/contact_family_name"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        android:textColor="#000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="278dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="278dp"
        android:layout_marginStart="16dp"
        android:text="@string/form_phone"
        app:layout_constraintBottom_toTopOf="@+id/contact_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_family_name" />

    <TextView
        android:id="@+id/contact_phone"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        android:textColor="#000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="329dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="329dp"
        android:layout_marginStart="16dp"
        android:text="@string/form_email"
        app:layout_constraintBottom_toTopOf="@+id/contact_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_phone" />

    <TextView
        android:id="@+id/contact_email"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/textView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        android:textColor="#000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="316dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="316dp"
        android:layout_marginStart="16dp"
        android:text="@string/form_address"
        app:layout_constraintBottom_toTopOf="@+id/contact_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_email" />

    <TextView
        android:id="@+id/contact_address"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        android:textColor="#000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="212dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="212dp"
        android:layout_marginStart="16dp"
        android:text="@string/form_phone_additional"
        app:layout_constraintBottom_toTopOf="@+id/contact_additional_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_address" />

    <TextView
        android:id="@+id/contact_additional_phone"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        android:textColor="#000"
        android:textSize="18sp" />
</android.support.constraint.ConstraintLayout>